--- a/index.html
+++ b/index.html
@@ -1,51 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Topedh by awilsoncs</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-    <a id="forkme_banner" href="https://github.com/awilsoncs/topedh">View on GitHub</a>
-    <div class="shell">
-
+    <div class="wrapper">
       <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Topedh</h1>
-            <h2>Analysis of most-played cards in the Commander format of Magic the Gathering.</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+        <h1>Topedh</h1>
+        <p>Analysis of most-played cards in the Commander format of Magic the Gathering.</p>
+
+        <p class="view"><a href="https://github.com/awilsoncs/topedh">View the Project on GitHub <small>awilsoncs/topedh</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/awilsoncs/topedh/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/awilsoncs/topedh/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/awilsoncs/topedh">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
-
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/awilsoncs/topedh/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/awilsoncs/topedh/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+      <section>
         <h1>
 <a id="topedh" class="anchor" href="#topedh" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TopEDH</h1>
 
@@ -5533,21 +5515,12 @@ Standard Deviation: 4.176357014399215
 Median: 2.0
 </code></pre>
       </section>
-
       <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/awilsoncs">awilsoncs</a> can be found on <a href="https://github.com/awilsoncs/topedh">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+        <p>This project is maintained by <a href="https://github.com/awilsoncs">awilsoncs</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
-
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
